  admin pages.

* Strip bad characters from affiliate source.  These characters cause problems
  in the usertrack log (and possibly other places) if they are allowed to remain
  in the source.

* Remove newline from errormessages to be able to parse locale of it

* Fixed a bug in the [read-cookie] tag which in very specific rare
  circumstances could return the wrong value for a cookie.

Tags
----
* Allow sorting of forum entries.

Standard Demo
-------------
* Fix for adding items to cart with options shows expired page message.  Thanks
  to Steve Graham <icdev@mrlock.com>.

* Fix for country selection drop down. 
  Thanks to Paul Jordan <paul@gishnetwork.com>.

* Fix for state selection drop down for Ireland.
  Thanks to Paul Jordan <paul@gishnetwork.com>.

------------------------------------------------------------------------------

Interchange 5.7.6 released on 2010-03-23.

Core
----
* Fix a "HTTP Response Splitting" security exploit.  This is not known
  to be exploitable in the standard demo, but could potentially affect
  other pages in rare circumstances.

* Fix a bug in initialization of Vend::Payment::BusinessOnlinePayment
  supplemental parameters.

* Fix a bug in css.tag to properly output the css when using the
  inline <style> block.

* Allow for bounces from Autoload routines.

* Fix SpecialPages directive for violation.html.

* Give some sort of informative error message if we crap out loading the locale
  db.

Standard Demo
-------------

* Correct comments in catalog.cfg for Limit robot_expire.

* Add comments for Limit ip_session_expire.

Admin UI
--------

* Remove the AdminUser configuration directive.

* Allow ids to be added to form widgets built from mv_metadata.

Contrib
-------

* Update jEdit syntax highlighting mode.

Debian packaging
----------------

* Multiple bug/dependency fixes.

------------------------------------------------------------------------------


Interchange 5.7.5 released on 2010-02-23.


Core
----
