@@ -35,6 +35,10 @@ Core
 * Fixed a bug in the [read-cookie] tag which in very specific rare
   circumstances could return the wrong value for a cookie.
 
+* Fixed a bug in parsing of TemplateDir directive with multiple directories
+  on a single line (RT#318).
+  Thanks to Mat Jones for the report.
+
 Tags
 ----
 * Allow sorting of forum entries.
